architecture/gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: prod
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: mathiskrr/breizhsport-api-gateway:develop
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 250Mi
