architecture/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: prod
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: gateway
