architecture/gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/hsts: "false"
spec:
  tls:
    - hosts:
        - api.poc-breizhsport.duckdns.org
      secretName: poc-gateway-breizhsport-tls-secret-api
  rules:
    - host: api.poc-breizhsport.duckdns.org
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 80
